updated folder structures and README.md
